fix: removing overflow x, moving scroll down position on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,7 @@
 
   html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
   }
 }
 
